# IMC-Calculator-API

./: .gitignore  pyproject.toml
imc_calculator/: __main__.py  calculator.py  main.py
tests/: test_imc_calculator.py
